Property bind e twowaydata bind

--- a/bytebank/src/app/nova-transferencia/nova-transferencia.component.scss
+++ b/bytebank/src/app/nova-transferencia/nova-transferencia.component.scss
@@ -32,7 +32,9 @@
   }
 }
 
-
+.botao-wrapper {
+  display: flex;
+}
 
 .botao {
   background-color: var(--primary);
@@ -46,9 +48,6 @@
   cursor: pointer;
   transition: opacity 0.2s;
 
-  &-wrapper {
-    display: flex;
-  }
 
   &--cancelar {
     background-color: var(--secondary);
