--- a/bytebank/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/bytebank/src/app/nova-transferencia/nova-transferencia.component.html
@@ -5,15 +5,15 @@
 
     <div class="form-field">
       <label class="form-field__label" for="valor">Valor</label>
-      <input calss="form-fiel__input" id="valor" type="text">
+      <input class="form-field__input" id="valor" type="text" [(ngModel)]="valor " name="valor">
     </div>
 
     <div class="form-field">
       <label class="form-field__label" for="destino">Destino</label>
-      <input class="form-fiel__input" id="destino" type="text">
+      <input class="form-field__input" id="destino" type="text" [(ngModel)]="destino" name="destino">
     </div>
 
-    <div class="botao-warpper">
+    <div class="botao-wrapper">
       <button class="botao" type="submit">Transferir</button>
     </div>
 
